QSampleCache: Wait for load thread to finish before restarting it

One cannot rely on QThread::isRunning for checking whether the thread
hasn't finished yet, as the thread might be quitting and still return
true from isRunning. In that case, the thread won't process the sample
load request that misses the start() call in this case.

Fixes: QTBUG-109167
Change-Id: I33382ad3d8a19ceb86857c51227e81a86a88eea7
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit cb5f13e766cade954ffea4f6a62d7b9c81b5fb90)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>